<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    android:id="@+id/cv_item_mimimi"
    android:layout_marginLeft="4dp"
    android:layout_marginBottom="2dp"
    android:layout_marginRight="4dp"
    app:cardUseCompatPadding="false"
    app:cardMaxElevation="6dp"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="10dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hashtag"
            android:textSize="18sp"
            android:padding="4dp"
            android:textColor="@color/colorAccent"
            android:text="@string/mimimi_item_hashtag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="4dp"
            android:layout_marginLeft="4dp"
            android:id="@+id/post_content"
            android:textSize="24sp"
            android:textColor="@color/primatyText"
            android:text="@string/mimimi_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:padding="2dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:padding="4dp"
                android:id="@+id/like"
                android:background="@drawable/ic_favorite_border_black_24dp"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:padding="4dp"
                android:layout_marginLeft="2dp"
                android:id="@+id/likeds"
                android:text="@string/mimimi_item_likeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>